--- a/public/popup.html
+++ b/public/popup.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>Getting Started Extension's Popup</title>
     <script src="js/vendor.js"></script>
+    <link rel="stylesheet" href="popup.css"/>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300&display=swap');
+      </style>
   </head>
   <body>
     <div id="root"></div>
