--- a/public/screenshots.html
+++ b/public/screenshots.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <h1> YO </h1>
+    <h1>View Screenshots</h1>
     <script src="js/display.js"></script>
   </body>
 </html>
