--- a/public/popup.html
+++ b/public/popup.html
@@ -1,17 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Getting Started Extension's Popup</title>
     <script src="js/vendor.js"></script>
-    <link rel="stylesheet" href="popup.css"/>
+    <!-- <link rel="stylesheet" href="popup.css" /> -->
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300&display=swap');
-      </style>
+      @import url("https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300&display=swap");
+    </style>
   </head>
   <body>
     <div id="root"></div>
     <script src="js/popup.js"></script>
   </body>
 </html>
-
